# homepage

./: .dockerignore  .drone.yml  .env.dev  .envrc  .eslintrc.js  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .htaccess  .pre-commit-config.yaml  Dockerfile  Jenkinsfile  LICENSE  Pipfile  README.md  angular.json  database.sqlite  flake.nix  index.html  kustomization.yml  manage.py  nuxt.config.js  package-lock.json  package.json  pnpm-lock.yaml  projects.html  pyproject.toml  robots.txt  shell.nix  sitemap.txt  vite.config.ts
.forgejo/workflows/: container_image.yml
.github/: dependabot.yml
.github/workflows/: build_container.yml  pre_commit.yml  test.yml
.run/: Run Server.run.xml  pytest.run.xml
.woodpecker/: container_image.yml  test.yml
backend/: pyproject.toml
backend/src/homepage/: settings.py  urls.py
css/: main.css  main_mobile.css  theme-windows98.css  widget-specifics.css
dev/: Containerfile  cmd.sh  compose.yaml  dev.env  dev.nginx.conf  prod.nginx.conf
docker/: nginx.conf  start_django.sh  start_frontend.sh  supervisord.conf
frontend/: content.config.ts  nuxt.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
frontend/app/: app.vue
frontend/app/components/: HCVSkill.vue  HCommand.vue  HFooter.vue  HHeader.vue  HTitledSection.vue
frontend/app/pages/: cv.vue  index.vue  legal.vue  projects.vue
frontend/app/utils/: blogUtils.ts
frontend/content/blog/: 001-creating-a-blog.md  002-feed-writing-for-fun-and-nonprofit.md  003-unmigrating-mas.md  004-getting-therapy-in-germany.md
js/: main.js  moveWindows.js
k8s/: deployment.yml  namespace.yml  service.yml
partials/: footer.hbs  header.hbs  html_head.hbs
public/: index.html  robots.txt
scripts/: get_color_scheme.py  start_dev_db.sh
src/: .eslintrc.cjs  .eslintrc.js  .htaccess  App.vue  app.vue  base.css  blinking_cursor.css  color_scheme.css  fonts.css  index.html  layout.css  main.ts  manifest.json  nuxt.config.js  nuxt.config.ts  package.json  pgpkey.txt  pnpm-lock.yaml  programs.ts  styles.css  svelte.config.js  tailwind.config.js  tailwind.config.ts  tsconfig.json
src/app/: app.component.css  app.component.html  app.component.mobile.css  app.component.spec.ts  app.component.ts  app.module.ts  widget.css  widget.ts
src/app/desktop/: desktop.component.css  desktop.component.html  desktop.component.ts  desktop.service.ts
src/app/taskbar/: taskbar.component.css  taskbar.component.html  taskbar.component.ts  taskbar.service.ts
src/app/widget/: desktop.service.ts  popup.component.css  popup.component.ts  widget.component.css  widget.component.html  widget.component.ts  windows-update.component.ts
src/app/widget-coding/: widget-coding.component.html  widget-coding.component.spec.ts  widget-coding.component.ts
src/app/widget-contact/: widget-contact.component.html  widget-contact.component.spec.ts  widget-contact.component.ts
src/app/widget-cv/: widget-cv.component.html  widget-cv.component.spec.ts  widget-cv.component.ts
src/app/widget-imprint/: widget-imprint.component.html  widget-imprint.component.ts
src/app/widgets/: desktop.service.ts  widget.css  widget.ts
src/assets/: colors.scss  media.css  utils.scss
src/components/: TaskBar.vue  TaskBarButton.vue  Window.vue  bluescreen.vue  explorer.vue  pixelflut.vue  startMenu.vue  svg-icon.vue  svgIcon.vue  system-tray.vue  systemTray.vue  systemTrayProgram.vue  tabs.vue  taskbar-program.vue  taskbar.vue  taskbarProgram.vue  viewport.vue  window.vue  windowTitlebar.vue  windowTitlebarButton.vue
src/components/content/: CV.vue  Coding.vue  Contact.vue  Imprint.vue
src/components/system-tray-widgets/: clock.vue  system-tray-program.vue
src/components/utils/: programs.ts
src/components/widget/: clock.vue  eyes.vue
src/components/windows/: coding.vue  contact.vue  cv.vue  defender.vue  (+2 more)
src/composables/: programManagement.ts  useDogPicture.ts
src/homepage/: __init__.py  admin.py  antinazi.py  app.py  apps.py  asgi.py  blog.py  cli.py  config.py  forms.py  friends.py  jinja2.py  main.py  markdown.py  middleware.py  models.py  oidc_user_mapping.py  settings.py  sitemap.py  state.py  templates.py  test_main.py  urls.py  views.py  webmention.py  well_known.py  wsgi.py
src/layouts/: default.vue
src/pages/: index.vue  pixelflut.vue
src/plugins/: router.ts  shims-plugins.d.ts  taskManager.ts
src/public/: robots.txt
src/src/: ProgramManagement.ts  app.html  dog_pictures.ts  global.d.ts
src/static/: finn-thorben_sell.gpg
src/styles/: colors.scss  helpers_classes.scss  shadows.scss
src/utils/: mixins.ts  programs.ts  windowMetadata.ts
src/verysecretriddles/: challenge_framework.body.php  challenge_framework.head.php  challenge_generator.php  imprint.html  notes.txt  windowsupdate.css  windowsupdate.js  windowsupdate.php
src/views/: Desktop.vue  Pixelflut.vue
verysecretriddles/: 8757.html  notes.txt  windowsupdate.html  windowsupdate.js
(+212 files in other folders)
