[project]
name = "homepage"
authors = [{name = "ftsell", email = "dev@ftsell.de"}]
dynamic = ["description"]
version = "2.5.4"
license = { file = "LICENSE" }

dependencies = [
    "fastapi~=0.110",           # python web framework
    "jinja2~=3.1",              # templating engine
    "hypercorn~=0.16",          # http server
    "colorama~=0.4",            # colored log output
    "markdown~=3.6",            # markdown parser for blog rendering
    "python-frontmatter~=1.1",  # frontmatter parser for blog entry metadata
    "pygments~=2.18",           # syntax highlighter for blog code blocks
]

[project.optional-dependencies]
dev = [
    "ipython",            # better python repl
    "pytest",             # test framework
    "httpx",              # http test client
    "beautifulsoup4",     # html parser for tests
]

[project.urls]
Home = "https://github.com/ftsell/homepage"
Source = "https://github.com/ftsell/homepage"

[project.scripts]
homepage = "homepage.main:main"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.ruff]
src = ["src"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "B", "SIM", "I"]

[tool.pytest.ini_options]
pythonpath = "src"
log_cli = true
norecursedirs = "*.egg .* dist"
